@@ -2,6 +2,7 @@
 
    * Makefile: add a new Makefile target `help` to list and describe all
    common targets.
+   * khmer/utils.py, tests/test_functions.py: minor style fixes.
 
 2015-02-16  Titus Brown  <titus@idyll.org>
 
